Changelog
=========

2.0.1 - unreleased
------------------

- fix for Chameleon compatibility
  [vangheem]

2.0 - 2010-07-18
----------------

- Update license to GPL version 2 only.
  [hannosch]

- Code cleanup and some PEP8.
  [hannosch]

2.0b4 - 2010-06-13
------------------

- Avoid deprecation warnings under Zope 2.13.
  [hannosch]

- Updated to use five.formlib.
  [hannosch]

2.0b3 - 2010-04-12
------------------

- Fix control panel templates to show the prefs portlet correctly again. This
  closes http://dev.plone.org/plone/ticket/10419.
  [davisagli]

2.0b2 - 2010-02-17
------------------

- Updated @@manage-content-rules to the recent markup conventions.
  References http://dev.plone.org/plone/ticket/9981.
  [spliter]

- Updated mail.pt to follow the recent markup conventions.
  References http://dev.plone.org/plone/ticket/9981.
  [spliter]

- Add "stop executing after this rule" checkbox to edit page of content rule.
  Fixes http://dev.plone.org/plone/ticket/8396.
  [MatthewWilkes]

2.0b1 - 2010-01-11
------------------

- Allow '@' in site from name. Fixes http://dev.plone.org/plone/ticket/9780.
  [smcmahon]

2.0a2 - 2009-12-27
------------------

- Declare package dependencies and replace zope.thread by the standard
  libraries threading module.
  [hannosch]

- Prepend mail messages with ``\n`` to avoid interpretation of first
  line as a mail header.
  [smcmahon]

- Renamed label_contentrules_rule_enabled by
  label_contentrules_rule_enabled_question in manage-assignments.pt.
  It conflicted with label_contentrules_rule_enabled in
  plone/app/contentrules/browser/templates/controlpanel.pt
  [vincentfretin]

- Don't include <q> tag in title_contentrules_assigned message.
  [vincentfretin]

2.0a1 - 2009-11-14
------------------

- Use zope.container and zope.browser in favor of zope.app dependencies.
  [hannosch]

- Change mailing send action to use "immediate=True" so that we can catch
  SMTPException. See note with code.
  [smcmahon]
